
[package]
name = "rust-by-example"
version = "0.1.0"
authors = ["1halfplusminus <sautron.gael@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name="constants"
path="src/constants.rs"

[[bin]]
name = "variable_bindings"
path = "src/variable_bindings.rs"

[[bin]]
name= "mutability"
path =  "src/mutability.rs"

[[bin]]
name="scope_shadowing"
path =  "src/scope_shadowing.rs"

[[bin]]
name="freezing"
path = "src/freezing.rs"

[[bin]]
name="casting"
path =  "src/casting.rs"

[[bin]]
name="literals"
path = "src/literals.rs"

[[bin]]
name ="inference"
path =  "src/inference.rs"

[[bin]]
name = "aliasing"
path =  "src/aliasing.rs"

[[bin]]
name = "6_conversion_from_into"
path =  "src/6_conversion_from_into.rs"

[[bin]]
name = "6_try_into"
path =  "src/6_try_into.rs"